# cpp-prog

./: .gitignore
hello-world/: hello-world  hello-world.cpp
nsu-labs/lab0b/: makefile
nsu-labs/lab0b/deprecated/: func-style.cpp  solo-main.cpp
nsu-labs/lab1/: CMakeLists.txt
nsu-labs/lab1/src/: bit-array.cpp  bit-array.h
nsu-labs/lab1/test/: test.cpp
nsu-labs/lab2/: CMakeLists.txt
nsu-labs/lab2/data/: beacon.lif  wrong-rule-values.lif
nsu-labs/lab2/src/: controller.cpp  controller.h  game.cpp  par.cpp  parrensim.cpp  parser.cpp  patterns.cpp  renderer.cpp  renderer.h  rensim.cpp  simulator.cpp  simulator.h
nsu-labs/lab2/test/: test.cpp
nsu-labs/lab3/: CMakeLists.txt
nsu-labs/lab3/src/: config-parser.cpp  converter.cpp  converter.h  main.cpp  parser.cpp  parser.h  soundp.cpp  soundp.h  wav.cpp  wav.h
nsu-labs/lab3/src/converters/: cropper.cpp  cropper.h  gainer.cpp  gainer.h  mixer.cpp  mixer.h  muter.cpp  muter.h
nsu-labs/lab4/: CMakeLists.txt
nsu-labs/lab4/data/: data.csv
nsu-labs/lab4/src/: csv-parser.hpp  main.cpp
nsu-labs/lab4/test/: test.cpp
playground/: undefined  undefined.cpp
std-version/: std-version  std-version.cpp
